fixed background image issue on safari mobile

--- a/src/views/Dashboard/Dashboard.css
+++ b/src/views/Dashboard/Dashboard.css
@@ -219,3 +219,9 @@ p {
     margin-top: 10%;
   }
 }
+
+@media (max-width: 640px) {
+  .banner-img {
+    background-attachment: initial;
+  }
+}
